--- a/_posts/2021-11-18-CV.md
+++ b/_posts/2021-11-18-CV.md
@@ -21,7 +21,7 @@ tags: [CV]     # TAG names should always be lowercase
 
 ---
 
-**Jianzhe Zhao, Xingwei Wang\*, Keming Mao, <u>Chenxi Huang</u>, Yukai Su and Yuchen Li,<br>*Correlated Differential Privacy of Multiparty Data Release in Machine Learning*,** accepted by ***Journal of Computer Science and Technology*** (CCF: B), 2021, Manuscript ID: JCST-2107-11754
+**Jianzhe Zhao, Xingwei Wang\*, Keming Mao, <u>Chenxi Huang</u>, Yukai Su and Yuchen Li,<br>*Correlated Differential Privacy of Multiparty Data Release in Machine Learning*,** accepted to ***Journal of Computer Science and Technology*** (CCF: B), 2021, Manuscript ID: JCST-2107-11754
 
 - In this paper, we proposed a novel correlated differential privacy of the multiparty data release (MP-CRDP), which effectively reduces the merged dataset’s dimensionality and correlated sensitivity in two steps to optimize the utility
 - We also proposed a multiparty correlation analysis technique by designing a more reasonable standard to measure the correlated degree, reducing correlated sensitivity and thus improve the data utility
